Fixes a couple of page layout issues: - the header could scroll up accidentally and seem to disappear; - the height of the '#cy' box was too large, so networks would not fit to screen properly.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -17,6 +17,12 @@ body {
   outline: none !important;
 }
 
+.network-editor {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
 input[type='text'],
 input[type='date'],
 input[type='week'],
